--- a/style.css
+++ b/style.css
@@ -44,10 +44,13 @@ main img {
 .item {
   flex: 1;
   margin: 10px;
+  align-self: center;
 }
 
 .item-double {
   flex: 2;
+  margin: 10px;
+  align-self: center;
 }
 
 /* -------  Navigation ------- */
@@ -132,5 +135,32 @@ footer p {
 
 /* -------  Media Query ------- */
 @media all and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+  }
 
+  header .logo {
+    font-size: 32px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  form .item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
